feat: added sync endpoint
