# openapi.json
@@ -417,6 +417,108 @@
         }
       }
     },
+    "/sync_jobs": {
+      "post": {
+        "tags": [
+          "Unit Jobs"
+        ],
+        "summary": "Create a new processing job",
+        "description": "Initiate a synchronous processing job with the provided data and return the result.",
+        "operationId": "create_sync_job_sync_jobs_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/BaseJobRequest"
+              },
+              "examples": {
+                "openEO Example": {
+                  "summary": "Valid openEO job request",
+                  "description": "The following example demonstrates how to create a processing job using an openEO-based service. This example triggers the [`variability map`](https://github.com/ESA-APEx/apex_algorithms/blob/main/algorithm_catalog/vito/variabilitymap/records/variabilitymap.json) process using the CDSE openEO Federation. In this case the `endpoint`represents the URL of the openEO backend and the `application` refers to the User Defined Process (UDP) that is being executed on the backend.",
+                  "value": {
+                    "title": "Example openEO Job",
+                    "label": "openeo",
+                    "service": {
+                      "endpoint": "https://openeofed.dataspace.copernicus.eu",
+                      "application": "https://raw.githubusercontent.com/ESA-APEx/apex_algorithms/32ea3c9a6fa24fe063cb59164cd318cceb7209b0/openeo_udp/variabilitymap/variabilitymap.json"
+                    },
+                    "parameters": {
+                      "spatial_extent": {
+                        "type": "FeatureCollection",
+                        "features": [
+                          {
+                            "type": "Feature",
+                            "properties": {},
+                            "geometry": {
+                              "coordinates": [
+                                [
+                                  [
+                                    5.170043941798298,
+                                    51.25050990858725
+                                  ],
+                                  [
+                                    5.171035037521989,
+                                    51.24865722468999
+                                  ],
+                                  [
+                                    5.178521828188366,
+                                    51.24674578027137
+                                  ],
+                                  [
+                                    5.179084341977159,
+                                    51.24984764553983
+                                  ],
+                                  [
+                                    5.170043941798298,
+                                    51.25050990858725
+                                  ]
+                                ]
+                              ],
+                              "type": "Polygon"
+                            }
+                          }
+                        ]
+                      },
+                      "temporal_extent": [
+                        "2025-05-01",
+                        "2025-05-01"
+                      ]
+                    },
+                    "format": "gtiff"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "OAuth2AuthorizationCodeBearer": []
+          }
+        ]
+      }
+    },
     "/upscale_tasks": {
       "post": {
         "tags": [
@@ -1468,7 +1570,8 @@
         "enum": [
           "geojson",
           "gtiff",
-          "netcdf"
+          "netcdf",
+          "json"
         ],
         "title": "OutputFormatEnum"
       },
